<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlDetailRetweetInfoRow"
            android:layout_marginBottom="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:id="@+id/ivDetailRetweetInfo"
                android:src="@drawable/retweet_small"
                android:layout_marginLeft="31dp"
                android:layout_marginStart="231dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDetailRetweetedUser"
                android:textColor="@color/dark_gray"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ivDetailRetweetInfo"
                android:layout_toEndOf="@+id/ivRetweetInfo"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivDetailProfileImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/ivProfile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvDetailname"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/text_size_13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvScreenName"
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_13sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBody"
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:textSize="@dimen/text_size_13sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivDetailPostImage"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_below="@+id/tvBody"
            android:layout_alignLeft="@+id/tvBody"
            android:layout_alignStart="@+id/tvBody"
            android:layout_alignRight="@+id/tvTimeofPost"
            android:layout_alignEnd="@id/tvTimeofPost"
            android:layout_marginBottom="@dimen/margin_10dp"/>

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textSize="10sp"
            />

        <View
            android:id="@+id/vTopSeparator"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRetweetsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_13sp"
                android:text="0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/tvRetweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:text="@string/tvRetweets"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_13sp" />

            <TextView
                android:id="@+id/tvFavouritesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/text_size_13sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="0"/>

            <TextView
                android:id="@+id/tvFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/tvFavourites"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_13sp" />
        </LinearLayout>

        <View
            android:id="@+id/vBottomSeparator"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            />



        <RelativeLayout
            android:id="@+id/rlActionsSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:orientation="horizontal"
            android:padding="3dp">


            <ImageView
                android:id="@+id/ivDetailReply"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="30dp"
                android:clickable="true"
                android:src="@drawable/reply"
                />
           <RelativeLayout
            android:id="@+id/rlDetailReTweetHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:orientation="horizontal"
            android:padding="3dp"
            android:layout_toRightOf="@+id/ivDetailReply"
               android:layout_marginRight="80dp">
                <ImageView
                    android:id="@+id/ivDetailRetweetCount"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="true"
                    android:src="@drawable/retweet" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailRetweetCount"
                    android:textColor="@color/gray"
                    android:layout_toRightOf="@+id/ivDetailRetweetCount"
                    android:textSize="@dimen/text_size_13sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDetailFavouriteHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/rlDetailReTweetHolder">
                <ImageView
                android:id="@+id/ivDetailFavouriteCount"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:clickable="true"
                android:src="@drawable/favorite" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDetailFavoriteCount"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_13sp"
                android:layout_toRightOf="@+id/ivDetailFavouriteCount"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/ivDetailShare"
                android:layout_width="@dimen/margin_20dp"
                android:layout_height="@dimen/margin_20dp"
                android:drawableLeft="@mipmap/ic_share"
                android:layout_toRightOf="@+id/rlDetailFavouriteHolder"
                android:layout_marginRight="30dp"/>
        </RelativeLayout>
        <WebView
            android:id="@+id/wvMedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>


